K8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-ingress
  namespace: ecom
spec:
  rules:
  - host: mapae.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-frontend-svc
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
